--- a/xiaodianbao/pages/seller/index/index.wxml
+++ b/xiaodianbao/pages/seller/index/index.wxml
@@ -22,9 +22,9 @@
   </view> -->
     <!--pages/home/home.wxml-->
 <view class="swiper-tab">
-  <view class="swiper-tab-item {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">30天</view>
-  <view class="swiper-tab-item {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">60天</view>
-  <view class="swiper-tab-item {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">1年</view>
+  <view class="swiper-tab-item {{diyongTab==0 ? 'on' : ''}}" data-current="0" bindtap="diyongSwitch">60天</view>
+  <view class="swiper-tab-item {{diyongTab==1 ? 'on' : ''}}" data-current="1" bindtap="diyongSwitch">2年</view>
+  <!--<view class="swiper-tab-item {{diyongTab==2 ? 'on' : ''}}" data-current="2" bindtap="diyongSwitch">2年</view>-->
 </view>
  
 <!-- <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 80}}px" bindchange="bindChange">
@@ -40,7 +40,8 @@
 </swiper> -->
   
   <view class='ke_zxt'>
-    <image class='zxt_ce' src='../../../images/gl_home_06.png'></image>
+    <!--<image class='zxt_ce' src='../../../images/gl_home_06.png'></image>-->
+    <canvas canvas-id="diyongChart" disable-scroll="true" class="canvas" ></canvas>
   </view>
   <view class='ck_mxt' bindtap='itmclick'>查看明细</view>
 </view>
@@ -53,13 +54,14 @@
     <view class='pf_bj'>1年</view>
   </view> -->
 <view class="swiper-tab">
-  <view class="swiper-tab-item {{currentTabr==0 ? 'on' : ''}}" data-currentsr="0" bindtap="swichNavr">30天</view>
-  <view class="swiper-tab-item {{currentTabr==1 ? 'on' : ''}}" data-currentsr="1" bindtap="swichNavr">60天</view>
-  <view class="swiper-tab-item {{currentTabr==2 ? 'on' : ''}}" data-currentsr="2" bindtap="swichNavr">1年</view>
+  <view class="swiper-tab-item {{cashTab==0 ? 'on' : ''}}" data-currentsr="0" bindtap="cashSwitch">60天</view>
+  <view class="swiper-tab-item {{cashTab==1 ? 'on' : ''}}" data-currentsr="1" bindtap="cashSwitch">2年</view>
+  <!--<view class="swiper-tab-item {{cashTab==2 ? 'on' : ''}}" data-currentsr="2" bindtap="cashSwitch">1年</view>-->
 </view>
 
   <view class='ke_zxt'>
-    <image class='zxt_ce' src='../../../images/gl_home_06.png'></image>
+    <!--<image class='zxt_ce' src='../../../images/gl_home_06.png'></image>-->
+    <canvas canvas-id="cashChart" disable-scroll="true" class="canvas" ></canvas>
   </view>
   <view class='ck_mxt' bindtap='itmclick'>查看明细</view>
 </view>
